# calude_memory_mcp

./: .claude.json  .env.docker.example  .env.example  .env.v14.template  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Dockerfile.dev  Dockerfile.optimized  README.md  auto_start_memory_system.sh  check_database.py  check_qdrant.py  claude  claude_cli_config_guide.md  claude_cli_mcp_server.py  config.py  configure_auto_start.sh  debug_mcp_server.py  deploy_production.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  enable_auto_features.sh  final_cleanup.py  fix_auto_memory.sh  fix_model_configurations.sh  fixed_production_mcp.py  inject_memory.py  main.py  mcp_server_stdio.py  memory_api.py  minimal_mcp_server.py  monitoring_mcp_server.py  pyproject.toml  pytest.ini  qdrant_config.yaml  quick_start_auto_save.sh  (+15 more)
.claude/hooks/: pre_message.sh
config/: .env.example  README.md  alertmanager.yml  claude_memory_alerts.yml  mcp_server_config.json  prometheus.yml  qdrant_docker.yaml  qdrant_wsl2_safe.yaml
config/monitoring/: alertmanager.yml  claude_memory_alerts.yml  prometheus.yml
config/qdrant/: config.yaml  simple_config.yaml
deploy/: README.md  immediate_production_fix.py  production_deployment_plan.md
deploy/docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml
deploy/scripts/: README.md  backup.sh  clean.sh  deploy_production_ubuntu.sh  docker-start.sh  (+6 more)
docs/: 2025-07-10_02-15-00_项目冗余分析报告.md  2025-07-10_03-45-00_项目冗余清理第一阶段执行报告.md  API_REFERENCE.md  ARCHITECTURE_ANALYSIS_REPORT.md  CLAUDE_MEMORY_TEST_REPORT_20250707_183740.md  CODE_STRUCTURE_ANALYSIS_REPORT.md  Claude Memory MCP 项目现状总结.md  DEPLOY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  OPERATIONS_RUNBOOK.md  PROJECT_CLEANUP_EXECUTION_REPORT.md  PROJECT_CLEANUP_PLAN.md  PROJECT_SUMMARY.md  PROJECT_TESTING_EXECUTION_REPORT.md  QUICK_REFERENCE.md  SCRIPTS_INDEX.md  USAGE_EXAMPLES.md  claude_cli_config_guide.md  claude_memory_mcp_spec_full_v1.4.md  trace.md
examples/: mini_llm_usage.py
global/: Dockerfile.global  README.md  demo_cross_project_search.py  demo_memory.db  demo_performance.db  demo_performance_optimization.py  docker-compose.global.yml  install.ps1  install.sh  install_macos.sh  quick_install.sh  requirements.global.txt  test_concurrent_memory.db  test_concurrent_performance.py  test_cross_platform.py  test_cross_project_memory.py  test_memory.db
logs/: integration_test_20250708_185408.json  mcp_server.log.2025-07-09  mcp_server.log.2025-07-10  monitoring.json  pipeline_test_report_20250708_224852.json
mcp/: requirements.txt  start-global.sh  start.ps1  start.sh  start.sh.save
migrations/: add_project_id_columns.sql  migrate_add_project_id.py
prompts/: MiniLLM_Memory_Prompt_Template_v3.md  memory_fusion_prompt_programming.txt
scripts/: add_project_id_to_memory_units.sql  alert_webhook.py  apply_phase2_fixes.sh  auto_inject_wrapper.sh  auto_start_all.sh  auto_start_memory_system.sh  backup_system.sh  check_data_sync.py  claude_memory_inject.sh  claude_with_memory.sh  claude_with_memory_enhanced.sh  claude_wrapper_minimal.py  cleanup_logs.sh  cli_heartbeat_test.py  comprehensive_health_check.py  configure_auto_start.sh  configure_claude_cli.py  conversation_write_test.py  cost_capacity_monitor.py  create_fixed_mcp_server.py  create_tables_manually.py  create_test_data.py  create_test_marker.sh  create_test_vector.py  db_maintenance.py  demo_project_isolation.py  deploy_monitoring.sh  deploy_production.sh  deployment_verification.py  explore_claude_alternatives.py  final_verification.sh  fix_claude_mcp_config.py  fix_data_issues.sql  fix_model_mapping.py  fix_phase2_issues.sql  fix_phase3_tests.py  fix_phase3_tests_v2.py  fix_phase3_tests_v3.py  fix_project_creation.py  fix_project_mcp_config.py  (+73 more)
storage/: raft_state.json
tests/: __init__.py  requirements.txt  test_ai_reranker_integration.py  test_auto_inject.sh  test_auto_save.sh  test_auto_save_fix.sh  test_core_components.py  test_cross_project.sh  test_full_workflow.py  test_injection_integration.py  test_mcp_direct.sh  test_mcp_protocol.py  test_reranker_flow.py  test_simple_workflow.py  test_system_integration.py  test_v14_integration.py  test_wrapper.py  test_wrapper_unit.py
(+169 files in other folders)
